# jirc

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE-OPUS-4.8.md  CLAUDE.md  FLOATING-WINDOWS-DESIGN.md  HANDOFF.md  LICENSE  PARITY.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
docs/: HANDOFF.md  PARITY.md  ROADMAP.md  version.md
public/: help.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  storage.rs
src-tauri/src/irc/: auth.rs  connection.rs  dcc.rs  event.rs  ircx.rs  ircx_keys.rs  ircx_sspi.rs  manager.rs  mod.rs  ntlm.rs  state.rs  stream.rs
src-tauri/src/script/: ast.rs  binvar.rs  eval.rs  files.rs  ident.rs  ini.rs  input.rs  mod.rs  parser.rs  socket.rs  timer.rs  users.rs  window.rs
src/components/: AutoJoinDialog.tsx  ChannelCentral.tsx  ChannelListDialog.tsx  ConfirmDialog.tsx  ConnectDialog.tsx  DetachedView.tsx  InputBar.tsx  MessageList.tsx  NickList.tsx  PromptDialog.tsx  ScriptDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  SwitchBar.tsx  TopicBar.tsx  TransfersPanel.tsx  UserDialogs.tsx  UsersSettings.tsx  popupMenu.tsx
src/ircFormat/: parse.test.ts  parse.tsx
src/lib/: api.ts  detach.ts  emoji.test.ts  emoji.ts  ircx.test.ts  ircx.ts  nickColor.ts  notify.ts  slash.test.ts  slash.ts
src/state/: away.ts  channelModes.ts  confirm.ts  dcc.ts  dialogs.ts  nickIcons.ts  notify.ts  prompt.ts  settings.ts  store.test.ts  store.ts  transfers.ts  urlGrabber.ts
test-scripts/: BV2 Extras.mrc  BV2 v0.31.mrc  Read Me.txt  Sockbot.mrc
