[package]
name = "jirc"
version = "26.7.13"
description = "jIRC — a modern, open-source mIRC-style IRC client (standard IRC + IRCX)"
authors = ["jIRC contributors"]
edition = "2021"
license = "MIT"
repository = ""

# The library that holds the app logic. Named with a `_lib` suffix so it does
# not clash with the `jirc` binary on Windows.
[lib]
name = "jirc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
irc-proto = "1.1.0"
futures-util = "0.3.32"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
# Use the `ring` crypto provider to avoid the aws-lc-rs C/NASM build deps.
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1.0.7"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
base64 = "0.22"
sspi = { version = "0.21.0", default-features = false }
regex = "1"
# Local time + date formatting for mSL $time/$date/$asctime ($asctime needs a
# timezone db; chrono's clock feature is already in the tree transitively).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Hashing for mSL $md5/$sha1/$sha256/$sha384/$sha512/$crc (pure-Rust, no C deps).
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
hmac = "0.12" # $hmac, and the HMAC core of $totp/$hotp
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] } # $pbkdf2
crc = "3" # $crc64
tokio-socks = "0.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
